# VFD_Clock

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/BME280_SensorAPI/: BME280_SensorAPI.c  CMakeLists.txt
components/BME280_SensorAPI/include/: BME280_SensorAPI.h  BME280_SensorAPI_defs.h
main/: CMakeLists.txt  main.cpp
main/include/: BME280.h  Backend.h  BitMatrix.h  COMMON.h  CTOR.h  Communicator.h  Converter.h  Frontend.h  FunctionChain.h  MCP230XX.h  MCP3x0x.h  SegmentDisplay.h  Settings.h  SignalProcessing.h  SmartTouch.h  VFD.h  bitwise_print.h  gpio_multi.h  hbridge.h  wifi.h
main/include/HD44780/: GPIO4BIT.h  HD44780.h  PCF8574.h
main/src/: Backend.cpp  Communicator.cpp  Converter.cpp  Frontend.cpp  Settings.cpp  hbridge.cpp  wifi.cpp
